# tarder

./: .gitignore  README.md  pyproject.toml
config/: settings.example.yaml  settings.yaml
docs/: windows_task_scheduler.md
openspec/: project.md
openspec/changes/astock-review-bot-v0.1/: design.md  proposal.md  tasks.md
openspec/changes/astock-review-bot-v0.1/specs/nightly-review/: spec.md
scripts/: clean_logs.ps1  clean_logs.sh  start.ps1  start.sh  stop.ps1  stop.sh
src/: __init__.py  config.py
src/collectors/: market_collector.py  news_collector.py
src/jobs/: nightly_review.py  scheduler.py
src/llm/: base.py  openai_compatible.py
src/push/: __init__.py  base.py  feishu_bot.py  pushplus_bot.py
src/review/: __init__.py  context_builder.py  plan_parser.py  prompt_builder.py  report_renderer.py  risk_filter.py  schemas.py
src/storage/: __init__.py  db.py
